--- a/lotteria/Classes/MapBody/MapBodyView.xib
+++ b/lotteria/Classes/MapBody/MapBodyView.xib
@@ -183,13 +183,14 @@
 					<object class="IBUITextField" id="266295194">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{17, 6}, {248, 31}}</string>
+						<string key="NSFrame">{{9, 6}, {248, 31}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUIText">동이름을 입력하세요.</string>
+						<string key="IBUIText"/>
+						<string key="IBUIPlaceholder">동이름을 입력하세요.</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4zNDExNzY0NzA2IDAuMjA3ODQzMTM3MyAwLjE0NTA5ODAzOTIAA</bytes>
@@ -316,12 +317,12 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="680748797"/>
 							<reference ref="706926197"/>
-							<reference ref="266295194"/>
 							<reference ref="191982087"/>
 							<reference ref="416261271"/>
 							<reference ref="573474291"/>
 							<reference ref="779034652"/>
 							<reference ref="400197767"/>
+							<reference ref="266295194"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -387,12 +388,13 @@
 					<string>92.IBPluginDependency</string>
 					<string>92.IBViewBoundsToFrameTransform</string>
 					<string>93.IBPluginDependency</string>
+					<string>93.IBViewBoundsToFrameTransform</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>MapBodyViewController</string>
 					<string>UIResponder</string>
-					<string>{{335, 179}, {320, 412}}</string>
+					<string>{{364, 163}, {320, 412}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
@@ -418,6 +420,9 @@
 						<bytes key="NSTransformStruct">P4AAAL+AAABDMQAAwx0AAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<object class="NSAffineTransform">
+						<bytes key="NSTransformStruct">P4AAAL+AAABCJAAAwiAAAA</bytes>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -443,7 +448,7 @@
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
 					<string key="className">MapBodyViewController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="superclassName">UIViewControllerTemplate</string>
 					<object class="NSMutableDictionary" key="actions">
 						<string key="NS.key.0">buttonClick:</string>
 						<string key="NS.object.0">id</string>
@@ -504,6 +509,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/MapBody/MapBodyViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIViewControllerTemplate</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">TemplateCell/UIViewControllerTemplate.h</string>
 					</object>
 				</object>
 			</object>
@@ -745,13 +758,13 @@
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>{304, 310}</string>
-				<string>{320, 43}</string>
-				<string>{50, 43}</string>
-				<string>{50, 43}</string>
-				<string>{50, 39}</string>
-				<string>{33, 30}</string>
-				<string>{33, 30}</string>
+				<string>{320, 323}</string>
+				<string>{320, 44}</string>
+				<string>{57, 50}</string>
+				<string>{57, 50}</string>
+				<string>{57, 50}</string>
+				<string>{33, 31}</string>
+				<string>{33, 31}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">132</string>
